some fixes in alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@
 header {
   background-color: rgba(0,0,0,0.2);
   margin-top: 0;
+  display: flex;
+  align-items: center;  /* Vertically center the content */
+  height: 100%;       /* Set the height of the container */
+  justify-content: center;  
 }
 
 #main-title {
@@ -114,4 +118,16 @@ main {
 .form-floating>.form-select~label {
   opacity: .65;
   transform: scale(.85) translateY(-.5rem) translateX(.15rem);
+}
+
+#event-list p{
+  letter-spacing: 0.05em;
+}
+
+#event-wedding {
+  padding-right: 5%;
+}
+
+#event-reception {
+  padding-left: 5%;
 }
